[gd_scene load_steps=7 format=3 uid="uid://cjlx8xho3o2gu"]

[ext_resource type="Script" path="res://Scenes/GameUI.gd" id="1_jj418"]
[ext_resource type="Script" path="res://scripts/BloodMeter.gd" id="1_vubt5"]
[ext_resource type="Theme" uid="uid://c3i6pb5edn2lb" path="res://theme.tres" id="2_amb8e"]
[ext_resource type="AudioStream" uid="uid://duo00u2nsx3en" path="res://sound/vox/vox_somuchblood.ogg" id="2_xufa7"]
[ext_resource type="AudioStream" uid="uid://cvfh4mxnesq4f" path="res://sound/vox/vox_mortis.ogg" id="3_4kfrd"]
[ext_resource type="AudioStream" uid="uid://dgpg4ak77cmqs" path="res://sound/vox/vox_exhausted.ogg" id="4_jc20o"]

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jj418")
winSounds = Array[AudioStreamOggVorbis]([ExtResource("2_xufa7")])
loseSounds = Array[AudioStreamOggVorbis]([ExtResource("3_4kfrd"), ExtResource("4_jc20o")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BloodMeter" type="Panel" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -54.0
offset_right = -71.0
offset_bottom = 54.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_vubt5")

[node name="Blood Meter" type="RichTextLabel" parent="CanvasLayer/BloodMeter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = -0.106
anchor_right = 1.353
anchor_bottom = 0.009
offset_left = -89.5
offset_top = -42.552
offset_right = 43.35
offset_bottom = -16.972
theme = ExtResource("2_amb8e")
theme_override_colors/default_color = Color(1, 0.152941, 0.109804, 1)
theme_override_colors/font_outline_color = Color(0.509804, 0.0117647, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 36
text = "Blood Meter"

[node name="FillRect" type="ColorRect" parent="CanvasLayer/BloodMeter"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, -1)
color = Color(0.854902, 0, 0, 1)

[node name="EndGameScreen" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -123.0
offset_right = 201.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="RichTextLabel" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 21.0
offset_bottom = 80.0
grow_horizontal = 2
theme = ExtResource("2_amb8e")
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "[center]You bloody did it!"

[node name="Body" type="RichTextLabel" parent="CanvasLayer/EndGameScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 93.0
offset_bottom = 152.0
grow_horizontal = 2
theme = ExtResource("2_amb8e")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]The demon hath been summoned"

[node name="Button" type="Button" parent="CanvasLayer/EndGameScreen"]
layout_mode = 0
offset_left = 100.0
offset_top = 156.0
offset_right = 288.0
offset_bottom = 225.0
text = "Menu"

[node name="PentagramPaintedText" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 24.0
offset_bottom = 113.0
grow_horizontal = 2
theme = ExtResource("2_amb8e")
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 45
bbcode_enabled = true
text = "[center]Pentagram painted: [b]
50%"

[connection signal="pressed" from="CanvasLayer/EndGameScreen/Button" to="." method="_on_button_pressed"]
